<resources>
    <string name="app_name">Inventory App</string>
    <string name="sale">sale</string>
    <string name="instructions">Please press the shopping cart icon below to start adding products</string>
    <string name="detail_activity_label">Product details</string>
    <string name="add_product_label">New product</string>
    <string name="quantity">Quantity</string>
    <string name="add_product">+</string>
    <string name="remove_product">-</string>
    <string name="call_supplier">call supplier</string>
    <string name="delete_product">delete product</string>
    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="supplier_number">Supplier number</string>
    <string name="add_image">add image</string>
    <string name="save_product">save product</string>
    <string name="cannot_access_images">Cannot access images</string>
    <string name="product_require_image">Product require image</string>
    <string name="product_require_supplier">Product require a supplier number</string>
    <string name="Product_require_quantity">Product require a quantity</string>
    <string name="product_require_price">Product require a price</string>
    <string name="product_require_name">Product require a name</string>
    <string name="insert_failed">Failed to insert the Product</string>
    <string name="insert_successful">Product insert successful</string>
    <string name="delete_dialog_msg">Discard adding product and quit</string>
    <string name="unsaved_changes_dialog_msg">Discard product and quit editing ?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="negative_price_error">price must be postive value</string>
    <string name="negative_quantity_input">Quantity must be postive number</string>
    <string name="sale_failed">failed could not update quantity</string>
    <string name="quantity_zero">Cannot make sale quantity equal zero</string>
    <string name="below_zero_quantity_error">Cannot decrease quantity below zero</string>
    <string name="delete_failed">failed to delete pet</string>
    <string name="delete_successful">Product deleted</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="delete_confirmation">do you want to delete the product ?</string>

    <item type="id" name="cursor">1</item>
    <item type="id" name="id">2</item>
</resources>
